# github-unified-mcp-bff

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-ghcr.yml
app/: audit.py  auth.py  capabilities.py  config.py  main.py  mcp_oauth.py  middleware.py  operations.py  proxy.py  rate_limit.py  rbac.py  tool_policy.py
tests/: conftest.py  test_audit.py  test_auth.py  test_capabilities.py  test_config.py  test_mcp_oauth.py  test_operations.py  test_proxy.py  test_rbac.py
